--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <div class="premier">
 	<h1>Hello, I am Romain</h1>
-		<img src="assets/photo1.png" alt"Photo de Romain Andrieu">
+		<img src="photo1.png" alt"Photo de Romain Andrieu">
 		<p>Étudiant à KEDGE Business School et professeur de tennis</p>
 		<a href="https://www.linkedin.com/in/romain-andrieu/" target="_blank">VENEZ ME DÉCOUVRIR</a>
 </div>
